// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Badge BadgeNumber renders 1`] = `
<Fragment>
  <h2
    id="badgenumber"
  >
    Badges with numbers
  </h2>
  <p>
    Badges are often used with numbers. Use 
    <Tag
      code={true}
      text=".badge-number"
      type="secondary"
    />
     when a badge suited for use with numbers is desired.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <p>
      Badge 
      <span
        className="badge badge-default badge-number"
      >
        1
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-inactive badge-number"
      >
        8
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-warning badge-number"
      >
        100
      </span>
    </p>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Badge Overview renders 1`] = `
<Fragment>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <p>
    Use class 
    <Tag
      code={true}
      text=".badge"
      type="secondary"
    />
     along with 
    <Tag
      code={true}
      text=".badge-{color}"
      type="secondary"
    />
     to display the badge of your choosing.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <p>
      Badge 
      <span
        className="badge badge-default"
      >
        Default
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-inactive"
      >
        Inactive
      </span>
    </p>
    <p>
      Badge 
      <span
        className="badge badge-warning"
      >
        Warning
      </span>
    </p>
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Badge renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Badges are small rectangular boxes which can convey a message and or state with their text and color.
  </p>
  <Overview />
  <BadgeNumber />
</DocContainer>
`;
